Fixed: Inner elements overflowing the order summary borders.

--- a/css/checkout-steps-319-beta-13.css
+++ b/css/checkout-steps-319-beta-13.css
@@ -2141,7 +2141,7 @@ div.woocommerce .fc-wrapper .fc-checkout-order-review .fc-checkout-order-review_
   width: calc(100% + 40px);
   max-width: calc(100% + 40px);
   background-color: var(--fluidcheckout--order-summary--background-color, var(--fluidcheckout--color--white, #fff));
-  overflow: visible;
+  overflow: hidden;
   box-shadow: 0 3px 8px var(--fluidcheckout--order-summary--shadow-color, transparent);
 }
 @media (min-width: 750px) {
